--- a/src/app.css
+++ b/src/app.css
@@ -1,8 +1,21 @@
 .navbar-brand {
-  color: dodgerblue !important;
+  color: #6200EE !important;
   font-size: xx-large;
 }
 
-.gravatar {
-  background-color: dodgerblue;
+.book-links li {
+  font-size: 90%;
+}
+
+.CircularProgressbar {
+  width: 50% !important;
+}
+
+.percent {
+  font-size: .75rem;
+}
+
+.update-progress {
+  background-color: #6200EE;
+  border-color: #6200EE;
 }
